@@ -1,0 +1,4 @@
+# adds the LireCustomCodec to the SPI.
+# This Codec is needed to ensure fast reading for linear search.
+
+net.semanticmetadata.lire.indexing.LireCustomCodec
